# nekoton-flutter

./: .gitignore  README.md  prepare.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/broxus/nekoton/: MainActivity.kt
core/: Cargo.toml  cbindgen.toml  makefile
core/src/: context.rs  external.rs  ffi.rs  global.rs  lib.rs  macros.rs  native_signer.rs  utils.rs
core/src/native_signer/: ffi.rs  mod.rs
core/src/wrappers/: mod.rs
core/src/wrappers/native_signer/: ffi.rs  mod.rs
core/src/wrappers/storage/: ffi.rs  mod.rs  models.rs
core/src/wrappers/ton_wallet/: ffi.rs  mod.rs
lib/: bindings.dart  core.dart  main.dart  models.dart
