[package]
name = "nt-bindings"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
name = "ntbindings"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
base64 = "0.13"
dyn-clone = "1.0"
ed25519-dalek = "1.0.1"
futures = "0.3"
num-bigint = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
syn = "=1.0.64"
thiserror = "1.0"
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
nekoton = { git = "https://github.com/broxus/nekoton.git" }
