[package]
name = "nt-bindings"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[lib]
name = "ntbindings"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
allo-isolate = "0.1.8-beta"
hex = "0.4"
base64 = "0.13"
dyn-clone = "1.0"
ed25519-dalek = "1.0.1"
futures = "0.3"
num-bigint = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9"
syn = "=1.0.64"
thiserror = "1.0"
tokio = { version = "1.5", features = [ "rt-multi-thread", "net", "fs", "sync" ] }
once_cell = "1.7.2"

android_logger = "0.10.1"
log ="0.4.14"
# labs
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

# broxus
nekoton = { git = "https://github.com/broxus/nekoton.git" }
libc = "0.2.93"
